[package]
name = "futures-tokio-compat"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
futures-core-preview = "0.3.0-alpha.17"
futures-io-preview = "0.3.0-alpha.17"
tokio-io = { git = "https://github.com/tokio-rs/tokio" }
tokio-executor = { git = "https://github.com/tokio-rs/tokio" }
log = "0.4.7"
pin-project = "0.3.3"
